MESS and other methods
